# price-tracker

./: .gitignore  Dockerfile  mkdocs.yml  package-lock.json  package.json  render.yaml  supabase_auth_migration.sql
.github/workflows/: scraper.yml
docs/: features.md  index.md  setup.md  technology.md
scraper/: main.py  pyproject.toml  seed_test.py  single_scrape.py  test_scraper.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/scrape/: route.ts
src/app/login/: page.tsx
src/components/: AddItemForm.tsx  ConfirmDialog.tsx  EditItemDialog.tsx  PriceChart.tsx  TrackedItemCard.tsx
src/lib/: AuthContext.tsx  supabase.ts
src/types/: index.ts
src/utils/: AuthContext.tsx
supabase/migrations/: 001_initial_schema.sql  002_enable_rls_and_policies.sql  003_add_status_field.sql  README.md
